<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/escolha_os_atibutos"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewMudaValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_20sembarra"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewMudaValor"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewMudaValor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMudaValor"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginEnd="8sp"
            android:layout_marginRight="8sp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:gravity="center"
                    android:text="@string/for_a"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMenosFor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="center_horizontal"
                        android:gravity="right"
                        android:text="@string/menos"
                        android:textColor="#FF0606"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewNumberFor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:gravity="right"
                        android:text="@string/_10"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewPlusFor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:foregroundGravity="right"
                        android:gravity="right"
                        android:text="@string/mais"
                        android:textColor="#4CAF50"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/destreza"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMenosDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/menos"
                        android:textColor="#FF0606"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewNumberDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/_10"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewPlusDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:foregroundGravity="right"
                        android:text="@string/mais"
                        android:textColor="#4CAF50"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/constitui_o"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMenosCon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/menos"
                        android:textColor="#FF0606"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewNumberCon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/_10"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewPlusCon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:foregroundGravity="right"
                        android:text="@string/mais"
                        android:textColor="#4CAF50"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/intelig_ncia"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMenosInt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/menos"
                        android:textColor="#FF0606"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewNumberInt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/_10"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewPlusInt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:foregroundGravity="right"
                        android:text="@string/mais"
                        android:textColor="#4CAF50"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/sabedoria"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMenosSab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/menos"
                        android:textColor="#FF0606"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewNumberSab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/_10"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewPlusSab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:foregroundGravity="right"
                        android:text="@string/mais"
                        android:textColor="#4CAF50"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/carisma"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMenosCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/menos"
                        android:textColor="#FF0606"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewNumberCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:foregroundGravity="right"
                        android:text="@string/_10"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewPlusCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:foregroundGravity="right"
                        android:text="@string/mais"
                        android:textColor="#4CAF50"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonAtributosProx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/proximo" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>